--- a/app/views/activities/new.html.erb
+++ b/app/views/activities/new.html.erb
@@ -1,5 +1,6 @@
 <div class="app-container-form">
-  <div class="stack-lg">
+  <div class="max-w-4xl mx-auto px-4 spacey-y-8">
+
       <header class="text-center stack-sm">
         <h1 class="heading-page">Add Workout</h1>
         <% if params[:date].present? %>
@@ -13,10 +14,11 @@
 
       <section class="card">
         <div class="card-section">
-          <%= render "form", activity: @activity %>
-        </div>
-        <div class="card-section border-t border-slate-200 flex justify-between items-center">
           <%= link_to "Back to this plan", @plan, class: "text-blue-600 transition-colors font-bold underline text-lg" %>
+        </div>
+        <div class="divider"></div>
+        <div class="card-section">
+          <%= render "form", activity: @activity %>
         </div>
       </section>
     </div>
